--- a/frontend/src/styles/Resume.css
+++ b/frontend/src/styles/Resume.css
@@ -9,43 +9,42 @@
 }
 
 .nav-item-res {
-   @apply text-center xl:w-[33%] p-5 text-xl;
+   @apply text-center xl:w-[33%] p-5 text-xl px-4 py-6 font-medium cursor-pointer transition-colors duration-300 ease-in-out;
 }
 
-.nav-item-res:hover {
-   @apply transition-all duration-300 ease-in-out transform text-(--color-primary);
-  box-shadow:
-    -6px -6px 12px rgba(255, 255, 255, 0.04),
-     6px  6px 12px rgba(0, 0, 0, 0.2);
+.res-heading {
+    @apply flex xl:ml-[10%] md:ml-[10%] xl:justify-start md:justify-start justify-center text-[24px] xl:text-5xl font-bold text-(--color-body) ;
 }
 
-.active {
-   @apply text-(--color-primary);
-  box-shadow:
-    -6px -6px 12px rgba(255, 255, 255, 0.04),
-     6px  6px 12px rgba(0, 0, 0, 0.2);
+.res-bio {
+    @apply flex xl:ml-[10%] md:ml-[10%] xl:justify-start md:justify-start justify-center text-[12px] xl:text-[14px] text-center text-(--color-primary) mb-1.5;
+}
+
+/* Only apply these hover effects on xl and up */
+@media (min-width: 1280px) {
+  .nav-item-res:hover {
+    @apply transform text-(--color-primary) border-b-2 border-(--color-primary);
+    box-shadow:
+      -6px -6px 12px rgba(255, 255, 255, 0.04),
+       0px  0px 12px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+  }
+
+  .active {
+   @apply transform text-(--color-primary) border-b-2 border-(--color-primary);
+    box-shadow:
+      -6px -6px 12px rgba(255, 255, 255, 0.04),
+       0px  0px 12px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+}
+
 }
 
 
-ul, #tree {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
-}
-caret {
-   cursor: pointer;
-   user-select: none;
-}
-caret::before {
-   content: "\25B6"; /* Right arrow */
-   margin-right: 6px;
-}
-caret-down::before {
-   transform: rotate(90deg); /* Down arrow */
-}
-nested {
-   display: none;
-}
-active {
-   display: block;
+  .active {
+   @apply w-full xl:w-[33%] transform text-(--color-primary) border-b-2 border-(--color-primary);
+    box-shadow:
+      -6px -6px 12px rgba(255, 255, 255, 0.04),
+       0px  0px 12px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
 }
